welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:13: error: not found: value EST
	while (!estFaceMur && getDirection != EST && testg== false) {
                                              ^